We're still using JDK-1.4 for release builds.